2010-10-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Julien Le Goff 
	* ChangeLog:
	* flumotion/component/effects/deinterlace/deinterlace.py:
	Reset the colorpsace converter after changing the deinterlacer
	for a proper re-negotiation

2010-10-07  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Julie Le Goff
	* flumotion/component/effects/deinterlace/deinterlace.py:
	Fix initialisation. The component was not switching the deinterlacer
	properly repecting the configuration.

2010-10-05  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/twisted/flavors.py:
	Reintroduce the removed (in r8746) "_set" attribute for compatibility.

2010-10-05  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/httpstreamer/Makefile.am:
	Add missing files to Makefile.am

2010-10-04  Marek Kowalski  <mkowalski@flumotion.com>

	* flumotion/test/test_component_icystreamer.py:
	Make streamer listen on random port not to interfere with other tests
	running.

2010-10-04  Marek Kowalski  <mkowalski@flumotion.com>

	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	Change streamer mood to happy after receiving first data buffer and
	calculating stream bitrate.

2010-10-04  Marek Kowalski  <mkowalski@flumotion.com>

	* flumotion/component/consumers/httpstreamer/admin_gtk.py:
	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/consumers/httpstreamer/icytab.glade:
	Admin UI for http streamer.

2010-10-01  Marek Kowalski  <mkowalski@flumotion.com>

	* flumotion/component/consumers/httpstreamer/httpstreamer.py:
	* flumotion/component/consumers/httpstreamer/httpstreamer.xml:
	* flumotion/component/consumers/httpstreamer/resources.py:
	Introduce icy-streamer component and ICYResource class for parsing
	incoming request headers.
	* flumotion/test/test_component_icystreamer.py:
	Tests for new component.
	* flumotion/component/consumers/httpstreamer/icymux.py: